--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,34 @@
+altgraph==0.17.4
+bottle==0.13.2
+bottle-websocket==0.2.9
+cachetools==5.5.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+Eel==0.18.1
+future==1.0.0
+gevent==24.11.1
+gevent-websocket==0.10.1
+greenlet==3.1.1
+idna==3.10
+ordered-set==4.1.0
+packaging==24.2
+pefile==2023.2.7
+pycparser==2.22
+pyinstaller-hooks-contrib==2025.1
+pyparsing==3.2.1
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.2
 PyQt5_sip==12.17.0
 PyQtWebEngine==5.15.7
 PyQtWebEngine-Qt5==5.15.2
+python-vlc==3.0.21203
+pywin32-ctypes==0.2.3
+requests==2.32.3
+tomli==2.2.1
+typing_extensions==4.12.2
+urllib3==2.3.0
 yt-dlp==2025.1.26
+zope.event==5.0
+zope.interface==7.2
+zstandard==0.23.0
